argocd/apps/recipes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: recipes
    tier: database
  name: recipes-postgresql
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: postgresql
  selector:
    app: recipes
    tier: database
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: recipes
  labels:
    app: recipes
    tier: frontend
spec:
  selector:
    app: recipes
    tier: frontend
    environment: production
  ports:
  - port: 80
    targetPort: http
    name: http
    protocol: TCP
  - port: 8080
    targetPort: gunicorn
    name: gunicorn
    protocol: TCP
