argocd/apps/recipes/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: recipes
spec:
  hosts:
  - "recipes.yanello.net"
  gateways:
  - istio-system/kube-gateway
  http:
  - match:
    - uri:
        prefix: "/media"
    route:
    - destination:
        host: recipes
        port:
          number: 80
      headers:
              request:
                set:
                  Host: "$request_host"  # or use specific value like "recipes.yanello.net"
  - match:
    - uri:
        prefix: "/static"
    route:
    - destination:
        host: recipes
        port:
          number: 80
      headers:
              request:
                set:
                  Host: "$request_host"  # or use specific value like "recipes.yanello.net"
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: recipes
        port:
          number: 8080
      headers:
              request:
                set:
                  Host: "$request_host"  # or use specific value like "recipes.yanello.net"
